# PR2FeatureExtraction

kinect_features/: CMakeLists.txt  CMakeLists.txt~  package.xml
kinect_features/include/kinect_features/: PCLHeader.h  PointIndices.h  moment_of_inertia_estimation.h  moment_of_inertia_estimation.h~
kinect_features/launch/: primary_launch.launch
kinect_features/src/: ConvertToPCLPointCloud.cpp  cluster_extraction.cpp  cluster_extraction.cpp~  cluster_feature_extraction.cpp  cluster_feature_extraction.cpp~  cluster_feature_extraction_subscriber.cpp  cluster_feature_extraction_subscriber.cpp~  moment_of_inertia_estimation.cpp  moment_of_inertia_estimation.cpp~  moment_of_inertia_estimation.hpp~  normal_extraction.cpp  openni_grabber.cpp
